# MobileApp

./: App.tsx  BUILD_MARKER_LOCAL_FIRST.txt  Index.html  LOCAL_RUNTIME.md  NATIVE_BUILD_STATUS.md  README.md  Script.js  app.json  package.json  settings.gradle
.github/workflows/: build-android.yml  build-apk.yml  build-llama-rn-apk-pr-v2.yml  build-llama-rn-apk-pr.yml  build-llama-rn-apk-v2.yml  build-llama-rn-apk.yml  build-local-artifacts.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/pocketmind/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/me/themishka/pocketmind/: MainActivity.java  NativeBridge.java
app/src/main/res/values/: styles.xml
app/src/main/res/values-night/: styles.xml
local-artifacts/: App.tsx  README.md  app.json  package.json  tsconfig.json
local-artifacts/android/: settings.gradle
local-artifacts/android/app/: build.gradle
local-artifacts/android/app/src/main/res/values/: strings.xml
local-artifacts/scripts/: generate-artifact-runtime.mjs
local-artifacts/src/: constants.ts  theme.ts  types.ts
local-artifacts/src/components/: ArtifactRenderer.tsx
local-artifacts/src/hooks/: useThrottledStream.ts
local-artifacts/src/services/: ArtifactParser.ts  LlamaService.ts  ModelService.ts  StorageService.ts  WebSearchService.ts  bridgeScript.ts
rn/: App.tsx  AppV2.tsx
src/services/: llama.ts
